# ibkr-trading

./: .env  .env.example  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  Taskfile.yaml  devenv.nix  docker-compose-dev.yaml  docker-compose-evd.yaml  docker-compose-p4d.yaml  docker-compose.dev.yml  docker-compose.ports.yml  docker-compose.prod.yml  docker-compose.tailscale.yml  docker-compose.yaml  docker-compose.yml  ibkr-bot-0.2.0.tgz  ibkr-bot-0.3.0.tgz  ibkr-bot-0.4.0.tgz  ibkr-bot-0.4.1.tgz  ibkr-bot-0.4.2.tgz  ibkr-bot-0.4.3.tgz  index.yaml  pulumi.nix  pylintrc  pyproject.toml  readme.md  ruff.toml
.github/lint/: .yamllint.yaml
.github/workflows/: publish-containers.yaml  publish-helm.yaml  publish-to-registry.yaml
api/: Dockerfile  main.py  requirements.txt
app/: Dockerfile  app.py  calendar_handler.py  contract_handler.py  main.py  message_handler.py  models.py  position_handler.py  requirements.txt  settings.py  trade_handler.py  trade_logic.py
app/bot/: main.py  utils.py
app/common/: __init__.py  logging_config.py
app/databot/: __init__.py  main.py
app/gateway/: __init__.py  main.py  (+3 more)
application/: Dockerfile  requirements.txt  test.py
application-dev/: Dockerfile  test.py
application-gcp/: Dockerfile  app.py  requirements.txt
bots/: Dockerfile  main.py
deployments/: digital-ocean.sh  gcp-vm.yml  google-cloud.sh
downloader/: Dockerfile  app.py  jupyter_notebook_config.py  requirements.txt
frontend-gcp/: package.json  server.js
gateway/: Dockerfile  config.ini  gatewaystart.sh  ibgateway.vmoptions  jts.ini  runscript.sh  start.sh  supervisord.conf
google-app-engine/: app.py  app.yaml  requirements.txt  template_pos_stats.py  template_ptf_stats.py
infra/: Pulumi.yaml  __main__.py  config.py  dc_helper.py  docker-compose-prod.yaml  ec2_helper.py  requirements.txt
trader/: app.py  requirements.txt
trader-dev/: app.py  requirements.txt
(+85 files in other folders)
