[tool.poetry]
name = "ibkr-trading"
version = "0.1.0"
description = ""
authors = ["Oleg Medvedyev <omdv.public@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ib-insync = ">=0.9.56"
schedule = ">=1.1.0"
google-cloud-storage = ">=1.39.0"
holidays = ">=0.11.1"
pytz = ">=2022.1"
pandas = "^2.0.0"

[tool.poetry.dev-dependencies]
pylint = ">=2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
