[tool.poetry]
name = "ibkr-trading"
version = "0.1.0"
description = ""
authors = ["Oleg Medvedyev <omdv.public@gmail.com>"]
license = "MIT"

[tool.poetry.group.main.dependencies]
python = "3.11.9"
ib-insync = ">=0.9.56"
schedule = ">=1.1.0"
holidays = ">=0.11.1"
pytz = ">=2022.1"
pandas = "^2.0.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
ruamel-yaml = "^0.18.6"


[tool.poetry.group.dev.dependencies]
pylint = ">=2.14.5"
jupyterlab = "^4.0.8"
pulumi = "3.112.0"
pulumi-aws = "6.28.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
